--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Alkajatomota <Alkajatomota@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-rand = '*'
-rayon = '1.5.0'
-num_cpus = "1.0"
+rand = "0.8.5"
+rayon = "1.6.1"
+
+[profile.test]
+opt-level = 3
+debug = true
