--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,10 @@
 name = "evolvable"
 version = "0.1.0"
 authors = ["Alkajatomota <Alkajatomota@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
+num_cpus = "1.16.0"
 rand = "0.8.5"
 rayon = "1.6.1"
 
